Implement execution of FeatureStats